...
                <userDefaultsController representsSharedInstance="YES" id="6Kl-2j-Nad"/>
                <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                <viewController title="CodePiece" identifier="MainViewController" storyboardIdentifier="MainViewController" id="XfG-lQ-9wD" customClass="MainViewController" customModule="CodePiece" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="m2S-Jp-Qdl">
                        <rect key="frame" x="0.0" y="0.0" width="744" height="438"/>
...
                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                    <subviews>
                                        <textView identifier="CodeTextIdentifier" importsGraphics="NO" richText="NO" verticallyResizable="YES" findStyle="panel" allowsUndo="YES" allowsNonContiguousLayout="YES" smartInsertDelete="YES" id="8OA-rk-WhX" customClass="CodeTextView" customModule="CodePiece" customModuleProvider="target">
                                            <rect key="frame" x="0.0" y="0.0" width="702" height="279"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                                            <size key="maxSize" width="707" height="10000000"/>
                                            <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                            <accessibility description="Code Text Field" help="Input text for post." identifier="TextFieldForInputCode"/>
                                            <connections>
                                                <outlet property="delegate" destination="XfG-lQ-9wD" id="iqw-bw-P7O"/>
...
                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-oO-N5A">
                                <rect key="frame" x="18" y="402" width="37" height="16"/>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Code" id="ADW-dv-PzJ">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
...
                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                    <subviews>
                                        <button identifier="PostButtonIdentifier" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tsY-MH-1c4">
                                            <rect key="frame" x="584" y="20" width="100" height="26"/>
                                            <constraints>
...
                                            </textFieldCell>
                                        </textField>
                                        <textField identifier="HashtagTextFieldIdentifier" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8VY-21-QQc" customClass="HashtagTextField" customModule="CodePiece" customModuleProvider="target">
                                            <rect key="frame" x="410" y="21" width="134" height="23"/>
                                            <constraints>
...
                                            </textFieldCell>
                                        </textField>
                                        <textField identifier="TweetTextFieldIdentifier" horizontalHuggingPriority="200" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KZX-ml-gl0" customClass="DescriptionTextField" customModule="CodePiece" customModuleProvider="target">
                                            <rect key="frame" x="15" y="21" width="387" height="23"/>
                                            <constraints>
...
                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uhw-fC-q9G" userLabel="Reachability">
                                                <rect key="frame" x="18" y="1" width="53" height="14"/>
                                                <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Unknown" id="BKD-Nd-Aq6">
                                                    <font key="font" metaFont="message" size="11"/>
                                                    <color key="textColor" name="StatusLabelColor"/>
...
