...
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="CodePiece" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="CodePiece" systemMenu="apple" id="uQy-DD-JDr">
                                    <items>
                                        <menuItem title="About CodePiece" id="5kV-Vb-QxS">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
                                                <segue destination="yQC-UB-5yF" kind="modal" identifier="" customClass="AboutWindowControllerSegue" customModule="CodePiece" customModuleProvider="target" id="nXU-7e-ZW7"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
...
                                                <binding destination="noF-Hz-Tly" name="enabled" keyPath="self.canOpenGitHubHome" id="dxd-Dq-wxv"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Editor" id="FAs-Ui-ixp">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Editor" id="ufy-Hc-iBV">
                                    <items>
                                        <menuItem title="Clear Code and Description" keyEquivalent="C" id="cqU-D4-TA8">
                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" option="YES" command="YES"/>
                                            <connections>
...
